make z-index of header image wrapper higher than z-index of the wave image so it solves the issue on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,7 @@ button:active {
 
 .header__img--wrapper {
     padding: 20px;
+    z-index: 2;
 }
 
 .container {
